--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "google-flights-clone",
-  "homepage": "https://artyomloyko.github.io/google-flights-clone/",
+  "homepage": "https://artyomloyko.github.io/google-flights-clone",
   "private": true,
   "version": "0.0.0",
   "type": "module",
